assets/devspecs/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/graphql/" }
                route:
                  cluster: configurator-be
                  max_grpc_timeout: 0s
              - match: { prefix: "/graphql" }
                route:
                  cluster: configurator-be
                  max_grpc_timeout: 0s
              - match: { prefix: "/" }
                route:
                  cluster: configurator-fe
                  max_grpc_timeout: 0s
              cors:
                allow_origin_string_match:
                - safe_regex: 
                    google_re2: 
                      max_program_size: 
                        value: 100
                    regex: ".*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: >-
                  keep-alive,
                  user-agent,
                  cache-control,
                  content-type,
                  content-transfer-encoding,
                  custom-header-1,
                  x-accept-content-transfer-encoding,
                  x-accept-response-streaming,
                  x-user-agent,
                  x-grpc-web,
                  grpc-timeout,
                  authorization
                expose_headers: >-
                  custom-header-1,
                  grpc-status,
                  grpc-message
                max_age: "1728000"
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
  clusters:
  - name: configurator-be
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: configurator-be
        port_value: 9303
  - name: configurator-fe
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
      - socket_address:
          address: configurator-fe
          port_value: 80
